Work done before IAT 2

--- a/src/main/resources/com/tonevellah/demofx1/Scene18.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/Scene18.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: #3F3131;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene8Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: #3F3131;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.typedash.demofx1.Scene8Controller">
     <children>
         <Text fx:id="wordsPerMin" fill="WHITE" layoutX="677.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER">
             <font>
