--- a/src/main/resources/com/tonevellah/demofx1/Scene15.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/Scene15.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: #3F3131;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene5Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: #3F3131;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.typedash.demofx1.Scene5Controller">
     <children>
         <Button layoutX="759.0" layoutY="482.0" mnemonicParsing="false" onAction="#gotogame" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: #0598ff;" text="Start Test" textFill="#faf4f4">
             <font>
