--- a/src/main/resources/com/tonevellah/demofx1/Scene17.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/Scene17.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: #333030;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene7Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: #333030;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.typedash.demofx1.Scene7Controller">
     <children>
         <Button layoutX="727.0" layoutY="497.0" mnemonicParsing="false" onAction="#gotogame" prefHeight="37.0" prefWidth="95.0" style="-fx-background-color: #0598ff;" text="Start" textFill="#faf4f4">
             <font>
