Work done before IAT 1

--- a/src/main/resources/com/tonevellah/demofx1/game.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/game.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.typedash.demofx1.Gamecontroller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Gamecontroller">
    <children>
       <TextField fx:id="userWord" layoutX="548.0" layoutY="462.0" onKeyPressed="#startGame" prefHeight="61.0" prefWidth="283.0" promptText="Go">
          <font>
