--- a/src/main/resources/com/tonevellah/demofx1/Scene5.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/Scene5.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: transparent; -fx-border-color: #0598ff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.typedash.demofx1.Scene5Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: transparent; -fx-border-color: #0598ff;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene5Controller">
     <children>
         <Button layoutX="759.0" layoutY="482.0" mnemonicParsing="false" onAction="#gotogame" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: #0598ff;" text="Start Test" textFill="#faf4f4">
             <font>
@@ -78,25 +77,15 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="myChoiceBox" layoutX="753.0" layoutY="325.0" prefHeight="40.0" prefWidth="293.0">
+      <ChoiceBox fx:id="myChoiceBox" layoutX="719.0" layoutY="356.0" prefHeight="40.0" prefWidth="293.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></ChoiceBox>
-      <Label layoutX="539.0" layoutY="325.0" prefHeight="40.0" prefWidth="191.0" text="Choose Car :" textFill="#0095ff">
+      <Label layoutX="539.0" layoutY="356.0" prefHeight="40.0" prefWidth="191.0" text="Choose Car :" textFill="#0095ff">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="539.0" layoutY="406.0" prefHeight="40.0" prefWidth="191.0" text="Virtual Keyboard?" textFill="#0095ff">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <CheckBox fx:id="myCheckBox" layoutX="753.0" layoutY="408.0" mnemonicParsing="false" onAction="#getkeyboard" prefHeight="18.0" prefWidth="161.0" text="ON/OFF">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </CheckBox>
     </children>
     <effect>
         <Blend />
