--- a/resources/Scene4.fxml
+++ b/resources/Scene4.fxml
@@ -29,7 +29,7 @@
                </effect>
             </Button>
             <Pane prefHeight="4.0" prefWidth="283.0" />
-            <Button mnemonicParsing="false" onAction="#custom" prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #3F2B63;" text="Custom Race" textAlignment="CENTER" textFill="#ebe6e6">
+            <Button mnemonicParsing="false"  prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #3F2B63;" text="Custom Race" textAlignment="CENTER" textFill="#ebe6e6">
                <font>
                   <Font size="24.0" />
                </font>
@@ -41,7 +41,7 @@
                </effect>
             </Button>
             <Pane prefHeight="4.0" prefWidth="283.0" />
-            <Button mnemonicParsing="false" onAction="#programing" prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #3F2B63;" text="Programming Race" textFill="#ebe6e6">
+            <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #3F2B63;" text="Programming Race" textFill="#ebe6e6">
                <font>
                   <Font size="24.0" />
                </font>
