--- a/src/main/resources/com/tonevellah/demofx1/Scene111.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/Scene111.fxml
@@ -47,7 +47,7 @@
                 <Font size="18.0" />
             </font>
         </Text>
-        <Text fx:id="thirddProgramWord" fill="#3f3131" layoutX="978.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="121.60002441406255">
+        <Text fx:id="thirdProgramWord" fill="#3f3131" layoutX="978.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="121.60002441406255">
             <font>
                 <Font size="18.0" />
             </font>
