--- a/src/main/resources/com/tonevellah/demofx1/Scene3.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/Scene3.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!-- Register Scene-->
+
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,23 +11,22 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: transparent; -fx-border-color: #0598ff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene3Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="uname" layoutX="645.0" layoutY="268.0" prefHeight="65.0" prefWidth="272.0" promptText="User Name" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;">
+      <TextField layoutX="645.0" layoutY="268.0" prefHeight="65.0" prefWidth="272.0" promptText="User Name">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="pass" layoutX="645.0" layoutY="365.0" prefHeight="65.0" prefWidth="272.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;">
+      <PasswordField layoutX="645.0" layoutY="365.0" prefHeight="65.0" prefWidth="272.0" promptText="Password">
          <font>
             <Font size="14.0" />
          </font>
       </PasswordField>
-      <Button layoutX="727.0" layoutY="472.0" mnemonicParsing="false" onAction="#menu" prefHeight="37.0" prefWidth="95.0" style="-fx-background-color: #0598ff;" text="SignUp" textFill="#faf4f4">
+      <Button layoutX="727.0" layoutY="472.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="95.0" text="SignUp">
          <font>
             <Font size="14.0" />
          </font>
@@ -33,7 +34,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Text fill="#0095ff" layoutX="663.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Registration" wrappingWidth="235.20000000000005">
+      <Text layoutX="663.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Registration" wrappingWidth="235.20000000000005">
          <font>
             <Font size="30.0" />
          </font>
@@ -43,27 +44,26 @@
             <Image url="@TypeDash.png" />
          </image>
       </ImageView>
-      <Button layoutX="744.0" layoutY="566.0" mnemonicParsing="false" onAction="#goback" prefHeight="28.0" prefWidth="62.0" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;" text="Go Back" textFill="#333030">
+      <Button layoutX="744.0" layoutY="566.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="62.0" text="Go Back" textFill="#333030">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Circle fill="#3f2b63" layoutX="10.0" layoutY="162.0" radius="505.0" stroke="BLACK" strokeType="INSIDE" />
       <ImageView fitHeight="344.0" fitWidth="375.0" layoutX="154.0" layoutY="301.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@TypeDash1.png" />
          </image>
       </ImageView>
-      <Text fill="WHITE" layoutX="164.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Why Here?">
+      <Text layoutX="164.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Why Here?">
          <font>
             <Font size="28.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="54.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Slow Typing speed? Improve your WPM score">
+      <Text layoutX="54.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Slow Typing speed? Improve your WPM score">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="150.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Try our app Today">
+      <Text layoutX="150.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Try our app Today">
          <font>
             <Font size="20.0" />
          </font>
@@ -78,6 +78,6 @@
       <Blend />
    </effect>
    <cursor>
-      <Cursor fx:constant="HAND" />
+      <Cursor fx:constant="DEFAULT" />
    </cursor>
 </AnchorPane>
