--- a/src/main/resources/com/tonevellah/demofx1/Scene5.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/Scene5.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--Choose Car color and level interface-->
+
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -10,13 +12,12 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: transparent; -fx-border-color: #0598ff;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene5Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene5Controller">
     <children>
-        <Button layoutX="759.0" layoutY="482.0" mnemonicParsing="false" onAction="#gotogame" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: #0598ff;" text="Start Test" textFill="#faf4f4">
+        <Button layoutX="759.0" layoutY="482.0" mnemonicParsing="false" onAction="#gotogame" prefHeight="40.0" prefWidth="106.0" text="Start Test">
             <font>
                 <Font size="18.0" />
             </font>
@@ -24,7 +25,7 @@
                 <Cursor fx:constant="HAND" />
             </cursor>
         </Button>
-        <Text fill="#0095ff" layoutX="539.0" layoutY="277.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose Level :" wrappingWidth="161.0546875">
+        <Text layoutX="539.0" layoutY="277.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose Level :" wrappingWidth="161.0546875">
             <font>
                 <Font size="24.0" />
             </font>
@@ -34,7 +35,7 @@
                 <Image url="@TypeDash.png" />
             </image>
         </ImageView>
-        <Button layoutX="781.0" layoutY="577.0" mnemonicParsing="false" onAction="#goback" prefHeight="28.0" prefWidth="62.0" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;" text="Go Back" textFill="#333030">
+        <Button layoutX="781.0" layoutY="577.0" mnemonicParsing="false" onAction="#goback" prefHeight="28.0" prefWidth="62.0" text="Go Back" textFill="#333030">
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor></Button>
@@ -56,23 +57,22 @@
             <Font size="24.0" />
          </font>
       </RadioButton>
-      <Circle fill="#3f2b63" layoutX="10.0" layoutY="162.0" radius="505.0" stroke="BLACK" strokeType="INSIDE" />
       <ImageView fitHeight="344.0" fitWidth="375.0" layoutX="164.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@TypeDash1.png" />
          </image>
       </ImageView>
-      <Text fill="WHITE" layoutX="164.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Why Here?">
+      <Text layoutX="164.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Why Here?">
          <font>
             <Font size="28.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="54.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Slow Typing speed? Improve your WPM score">
+      <Text layoutX="54.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Slow Typing speed? Improve your WPM score">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="150.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Try our app Today">
+      <Text layoutX="150.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Try our app Today">
          <font>
             <Font size="20.0" />
          </font>
@@ -81,7 +81,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></ChoiceBox>
-      <Label layoutX="539.0" layoutY="356.0" prefHeight="40.0" prefWidth="191.0" text="Choose Car :" textFill="#0095ff">
+      <Label layoutX="539.0" layoutY="356.0" prefHeight="40.0" prefWidth="191.0" text="Choose Car :">
          <font>
             <Font size="24.0" />
          </font>
