--- a/src/main/resources/com/tonevellah/demofx1/Scene6.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/Scene6.fxml
@@ -9,43 +9,32 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" style="-fx-background-color: transparent; -fx-border-color: #0598ff;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene6Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Scene6Controller">
     <children>
-        <VBox layoutX="-1.0" layoutY="4.0" prefHeight="648.0" prefWidth="290.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="-1.0" AnchorPane.topAnchor="3.0">
-            <children>
-                <Pane prefHeight="150.0" prefWidth="350.0" />
-            <Pane prefHeight="3.0" prefWidth="286.0" />
-            </children>
-        </VBox>
-        <Button fx:id="button" layoutX="591.0" layoutY="570.0" mnemonicParsing="false" onAction="#tryagain" prefHeight="72.0" prefWidth="215.0" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;" text="Try Again" textFill="#333030">
+        <Button graphicTextGap="0.0" layoutX="598.0" layoutY="573.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="200.0" text="Try Again" textFill="#333030">
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor>
          <font>
-            <Font name="System Bold" size="29.0" />
+            <Font name="System Bold" size="18.0" />
          </font></Button>
-      <Circle fill="DODGERBLUE" layoutX="699.0" layoutY="475.0" radius="80.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" />
-      <Circle fill="DODGERBLUE" layoutX="937.0" layoutY="286.0" radius="70.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" />
       <Circle fill="WHITE" layoutX="699.0" layoutY="475.0" radius="75.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fill="WHITE" layoutX="937.0" layoutY="285.0" radius="65.0" stroke="BLACK" strokeType="INSIDE" />
-      <Label fx:id="wpmLabel" alignment="CENTER" layoutX="653.0" layoutY="482.0" prefHeight="54.0" prefWidth="94.0" text="Label" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="653.0" layoutY="482.0" prefHeight="54.0" prefWidth="94.0" text="Label" textAlignment="CENTER">
          <font>
             <Font size="38.0" />
          </font>
       </Label>
-      <Label fx:id="accuracyLabel" alignment="CENTER" layoutX="907.0" layoutY="288.0" prefHeight="54.0" prefWidth="62.0" text="Label" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="907.0" layoutY="288.0" prefHeight="54.0" prefWidth="62.0" text="Label" textAlignment="CENTER">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Circle fill="DODGERBLUE" layoutX="471.0" layoutY="286.0" radius="70.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fill="#fafdff" layoutX="471.0" layoutY="286.0" radius="65.0" stroke="BLACK" strokeType="INSIDE" />
-      <Label fx:id="typedwordsLabel" alignment="CENTER" layoutX="410.0" layoutY="297.0" prefHeight="35.0" prefWidth="122.0" text="Label" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="410.0" layoutY="297.0" prefHeight="35.0" prefWidth="122.0" text="Label" textAlignment="CENTER">
          <font>
             <Font size="24.0" />
          </font>
@@ -75,14 +64,13 @@
             <Image url="@TypeDash.png" />
          </image>
       </ImageView>
-      <Circle fill="DODGERBLUE" layoutX="698.0" layoutY="286.0" radius="70.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" />
       <Circle fill="#fafdff" layoutX="698.0" layoutY="285.0" radius="65.0" stroke="BLACK" strokeType="INSIDE" />
       <Label layoutX="640.0" layoutY="248.0" text="Wrong Word">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="wrongWordTypedLabel" alignment="CENTER" layoutX="639.0" layoutY="301.0" prefHeight="35.0" prefWidth="122.0" text="Label" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="639.0" layoutY="301.0" prefHeight="35.0" prefWidth="122.0" text="Label" textAlignment="CENTER">
          <font>
             <Font size="24.0" />
          </font>
