--- a/src/main/resources/com/tonevellah/demofx1/game.fxml
+++ b/src/main/resources/com/tonevellah/demofx1/game.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--First GUI. Controller Class: Scene1Controller-->
+
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +14,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Gamecontroller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tonevellah.demofx1.Gamecontroller">
    <children>
       <TextField fx:id="userWord" layoutX="548.0" layoutY="462.0" onKeyPressed="#startGame" prefHeight="61.0" prefWidth="283.0" promptText="Go">
          <font>
@@ -21,7 +23,7 @@
          <cursor>
             <Cursor fx:constant="TEXT" />
          </cursor></TextField>
-      <Button fx:id="playAgain" layoutX="649.0" layoutY="595.0" mnemonicParsing="false" onMouseClicked="#resultview" prefHeight="32.0" prefWidth="82.0" style="-fx-background-color: #0598ff;" text="View Result" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="playAgain" layoutX="649.0" layoutY="595.0" mnemonicParsing="false" onMouseClicked="#resultview" prefHeight="32.0" prefWidth="82.0" text="View Result" textAlignment="CENTER">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
@@ -56,7 +58,7 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <Pane prefHeight="650.0" prefWidth="275.0" style="-fx-background-color: #3F2B63;">
+      <Pane prefHeight="650.0" prefWidth="275.0">
          <children>
             <ImageView fitHeight="650.0" fitWidth="164.0" layoutX="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
